[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/TestTextures/ArrowTop.png" type="Texture" id=1]
[ext_resource path="res://Scenes/UI.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="UI" type="CanvasLayer" parent="."]
layer = -5

[node name="ArrowLeft" type="Sprite" parent="UI"]
position = Vector2( 410.563, 517.093 )
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="ArrowRight" type="Sprite" parent="UI"]
position = Vector2( 645.619, 519.047 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="ArrowTop" type="Sprite" parent="UI"]
position = Vector2( 532.082, 437.268 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Points" type="Label" parent="UI"]
margin_left = 495.288
margin_top = 40.363
margin_right = 539.288
margin_bottom = 54.363
text = "Punkte"
__meta__ = {
"_edit_use_anchors_": false
}
